Menu Page Added

--- a/Sprint-1/Day-1/Restaurent_Page/src/app/app.component.html
+++ b/Sprint-1/Day-1/Restaurent_Page/src/app/app.component.html
@@ -1,1 +1,6 @@
+<h1
+  class="text-2xl underline flex justify-center h-16 font-bold text-brown hover:scale-105 cursor-pointer transform-center"
+>
+  Food Menu
+</h1>
 <router-outlet></router-outlet>
