--- a/Sprint-1/Day-1/Restaurent_Page/src/app/menu-page/menu-page.component.html
+++ b/Sprint-1/Day-1/Restaurent_Page/src/app/menu-page/menu-page.component.html
@@ -2,7 +2,7 @@
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 font-sans">
     <div
       *ngFor="let ele of Foods.categories"
-      class="border 1px solid black rounded shadow mt-5 px-3 py-3 relative overflow-hidden bg-red-200"
+      class="border 1px solid black rounded shadow mt-5 px-3 py-3 relative overflow-hidden bg-red-200 animate__animated animate__zoomInDown"
     >
       <img
         class="w-full h-auto hover:scale-105 transform-center transition-all cursor-pointer"
