--- a/Sprint-1/Day-1/Restaurent_Page/src/app/menu-page/menu-page.component.html
+++ b/Sprint-1/Day-1/Restaurent_Page/src/app/menu-page/menu-page.component.html
@@ -3,7 +3,7 @@
     <select
       class="text-white bg-blue-600 rounded px-2 py-1"
       [(ngModel)]="selectedFood"
-      (ngModelChange)="filterItem()"
+      (ngModelChange)="filterItem(); logData()"
     >
       <option value="alldata">ALL</option>
       <option value="Beef">Beef</option>
